# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

module_output_path = "player_framework/player_framework/av_codec"

demuxer_unit_test_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fno-exceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Werror",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Wunused-parameter",
  "-Dprivate=public",
  "-Dprotected=public",
]

#################################################################################################################
ohos_unittest("demuxer_unit_test") {
  sanitize = av_codec_test_sanitize
  module_out_path = module_output_path
  testonly = true
  include_dirs = [
    "./",
    "./capi",
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/interfaces/kits/c",
    "$av_codec_root_dir/frameworks/native/capi/common",
    "$av_codec_root_dir/test/unittest/format_test",
    "$av_codec_root_dir/test/unittest/format_test/capi",
    "$av_codec_root_dir/test/unittest/avsource_test",
    "$av_codec_root_dir/test/unittest/avsource_test/capi",
    "$av_codec_root_dir/test/unittest/common/common_mock",
    "$av_codec_root_dir/test/unittest/common/common_mock/avmemory",
    "$av_codec_root_dir/test/unittest/common/common_mock/avmemory/capi",
    "$av_codec_root_dir/test/nativedemo/include",
    "$av_codec_root_dir/test/nativedemo/avdemuxer/server_demo",
    "$av_codec_root_dir/services/utils/include",
    "$av_codec_root_dir/services/media_engine/modules/demuxer",
  ]

  cflags = demuxer_unit_test_cflags

  if (av_codec_support_demuxer) {
    sources = [
      "$av_codec_root_dir/test/nativedemo/avdemuxer/server_demo/file_server_demo.cpp",
      "$av_codec_root_dir/test/unittest/avsource_test/capi/avsource_capi_mock.cpp",
      "$av_codec_root_dir/test/unittest/avsource_test/capi/avsource_capi_mock_factory.cpp",
      "./demuxer_plugin_manager_unittest.cpp",
    ]
  }

  if (target_cpu == "arm64" || is_emulator) {
    av_codec_path = "\"/system/lib64\""
  } else {
    av_codec_path = "\"/system/lib\""
  }
  defines = [
    "AV_CODEC_PATH=${av_codec_path}",
    "DEMUXER_CAPI_UNIT_TEST",
  ]
  defines += av_codec_defines
  public_deps =
      [ "$av_codec_root_dir/test/unittest/common:av_codec_capi_unit_test" ]
  deps = [
    "$av_codec_root_dir/interfaces/kits/c:capi_packages",
    "$av_codec_root_dir/services/engine/base:av_codec_codec_base",
    "$av_codec_root_dir/services/media_engine/modules:av_codec_media_engine_modules",
    "$av_codec_root_dir/services/utils:av_codec_service_utils",
  ]
  external_deps = [
    "audio_framework:audio_capturer",
    "av_codec:av_codec_client",
    "c_utils:utils",
    "ffmpeg:libohosffmpeg",
    "googletest:gmock_main",
    "graphic_surface:surface",
    "graphic_surface:sync_fence",
    "hilog:libhilog",
    "hitrace:libhitracechain",
    "init:libbegetutil",
    "ipc:ipc_single",
    "media_foundation:media_foundation",
    "safwk:system_ability_fwk",
  ]
  if (av_codec_support_drm) {
    external_deps += [
      "drm_framework:drm_framework",
      "drm_framework:native_drm",
    ]
  }

  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}